# ChassisController

./: CMakeLists.txt  README.md
Chassis/: CMakeLists.txt
Chassis/Mecanum4/: Mecanum4.cpp  Mecanum4.hpp
Chassis/Omni4/: Omni4.cpp  Omni4.hpp
Chassis/Special_Steering4/: CMakeLists.txt  Special_Steering4.cpp  Special_Steering4.hpp  Special_SteeringWheel.cpp  Special_SteeringWheel.hpp
Chassis/Steering4/: Steering4.cpp  Steering4.hpp  SteeringWheel.cpp
Controller/: CMakeLists.txt  Master.hpp  Slave.hpp  cpkg.toml
Controller/Master/: CMakeLists.txt  Master.hpp  README.md  cpkg.toml
Controller/Slave/: CMakeLists.txt  README.md  Slave.hpp  cpkg.toml
Core/: CMakeLists.txt  IChassis.cpp  IChassis.hpp  IChassisController.hpp  IChassisDef.hpp  IChassisLoc.hpp  IChassisMotion.hpp  ILoc.hpp  cpkg.toml
Localization/EKF/: CMakeLists.txt  LocEKF.cpp  LocEKF.hpp  README.md  cpkg.toml
Localization/JustEncoder/: CMakeLists.txt  JustEncoder.cpp  JustEncoder.hpp
Mecanum4/: Mecanum4.cpp  Mecanum4.hpp
Steering4/: Steering4.cpp  Steering4.hpp
